--- a/LOGIN_REGISTER/payment_app/package.json
+++ b/LOGIN_REGISTER/payment_app/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
+    "fs": "^0.0.1-security",
+    "path": "^0.12.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2"
